--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,21 @@
 /** __Variables */
 /** static-fonts */
+$fa-font-path: "../static/webfonts";
 
 /** Colors */
+$white: #ffffff;
 
+$black: #000000;
+$sable: #060606;
+$charcoal: #2e1503;
+
+$tangerine: #ffaf6d;
+$orange: #ffa500;
+
+/** BreakPoints Sizes */
+$width-xs: 0;
+$width-sm: 576px;
+$width-md: 768px;
+$width-lg: 992px;
+$width-xl: 1200px;
+$width-xxl: 1400px;
