--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,1 +1,18 @@
 /** __Typography */
+$poppins: "Poppins", sans-serif;
+$ubuntu: "Ubuntu", sans-serif;
+
+/** weight */
+$regular: 400;
+$bold: 700;
+
+/** size */
+$xxxxx-large: 50px;
+$xxxx-large: 45px;
+$xxx-large: 40px;
+$xx-large: 35px;
+$x-large: 30px;
+$large: 20px;
+$medium: 16px;
+$small: 14px;
+$x-small: 12px;
