--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -1,1 +1,161 @@
 /** __Navigation */
+.navbar {
+    background-color: $black;
+    color: $white;
+    display: flex;
+    font-weight: $bold;
+    justify-content: center;
+    padding: 0rem;
+    position: relative;
+
+    /** Support Browsers */
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+    display: -webkit-box;
+    display: -ms-flexbox;
+
+    &__container {
+        align-items: center;
+        display: flex;
+        flex-wrap: inherit;
+        justify-content: space-between;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 0 1.75rem 0 0.25rem;
+        width: 100%;
+
+        /** Support Browsers */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        -ms-flex-wrap: inherit;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+
+        /** Breakpoints */
+        @include breakpoint("Celular") {
+            padding: 0 0.25rem 0 0.25rem;
+        }
+
+        &__brand {
+            align-items: center;
+            color: $white;
+            display: flex;
+            margin: 0.2rem;
+            padding: 0.2rem;
+            text-decoration: none;
+            white-space: nowrap;
+
+            /** Support Browsers */
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            display: -webkit-box;
+            display: -ms-flexbox;
+
+            img {
+                width: 13rem;
+                height: 5rem;
+
+                /** Breakpoints */
+                @include breakpoint("Celular") {
+                    width: 8rem;
+                    height: 3.8rem;
+                }
+                @include breakpoint("Tablet") {
+                    width: 10rem;
+                    height: 4rem;
+                }
+            }
+        }
+        &__toggler {
+            background-color: $black;
+            color: $white;
+            border: 1px solid $black;
+            border-radius: 0.25rem;
+            border-color: $black;
+            display: none;
+            font-size: 1.25rem;
+            padding: 0.6rem 0.75rem 0.1rem 0.75rem;
+
+            /** Breakpoints */
+            @include breakpoint("Celular") {
+                display: block;
+                margin: 0rem 1rem 0rem 0rem;
+            }
+
+            span {
+                height: 1.5em;
+                vertical-align: middle;
+                width: 1.5em;
+            }
+        }
+        &__collapse {
+            align-items: center;
+            display: flex;
+            flex-basis: auto;
+            flex-grow: 1;
+            margin: 0.2rem;
+            padding: 0.2rem;
+            width: 100%;
+
+            /** Support Browsers */
+            display: -webkit-box;
+            display: -ms-flexbox;
+            -ms-flex-preferred-size: auto;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-box-flex: 1;
+            -ms-flex-positive: 1;
+
+            /** Breakpoints */
+            @include breakpoint("Celular") {
+                display: none;
+            }
+
+            ul {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-end;
+                list-style: none;
+                margin-bottom: 0;
+                margin-left: auto;
+                margin-top: 0;
+                padding-left: 0;
+                width: 100%;
+
+                /** Support Browsers */
+                display: -webkit-box;
+                display: -ms-flexbox;
+                -webkit-box-orient: horizontal;
+                -webkit-box-direction: normal;
+                -ms-flex-direction: row;
+                -webkit-box-pack: end;
+                -ms-flex-pack: end;
+
+                li {
+                    list-style: none;
+                    a {
+                        color: $white;
+                        display: block;
+                        list-style: none;
+                        padding: 0.5rem 1rem;
+                        padding-right: 0.5rem;
+                        padding-left: 0.5rem;
+                        text-decoration: none;
+                        transition: none;
+
+                        /** Support Browsers */
+                        -webkit-transition: none;
+                        -o-transition: none;
+                    }
+                }
+            }
+        }
+    }
+}
