--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15054,7 +15054,7 @@ body {
   align-items: center;
   color: #ffffff;
   display: flex;
-  margin: 0.2rem;
+  margin: 0.4rem;
   padding: 0.2rem;
   text-decoration: none;
   white-space: nowrap;
@@ -15065,20 +15065,20 @@ body {
   display: -ms-flexbox;
 }
 .navbar__container__brand img {
-  width: 13rem;
-  height: 5rem;
+  width: 3rem;
+  height: 3rem;
   /** Breakpoints */
 }
 @media (min-width: 0px) and (max-width: 576px) {
   .navbar__container__brand img {
-    width: 8rem;
-    height: 3.8rem;
+    width: 2rem;
+    height: 2rem;
   }
 }
 @media (min-width: 576px) and (max-width: 992px) {
   .navbar__container__brand img {
-    width: 10rem;
-    height: 4rem;
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
 .navbar__container__toggler {
@@ -15163,7 +15163,76 @@ body {
 }
 
 /** __Grid */
+.container-grid {
+  display: grid;
+  /** Breakpoints */
+}
+@media (min-width: 0px) and (max-width: 576px) {
+  .container-grid__section {
+    border: 1px solid #000000;
+    margin: 0.2rem 1rem;
+    padding: 2rem;
+  }
+}
+@media (min-width: 576px) and (max-width: 992px) {
+  .container-grid__section {
+    border: 1px solid #000000;
+    margin: 1rem;
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .container-grid__section {
+    border: 1px solid #000000;
+    margin: 1rem;
+    padding: 2rem;
+  }
+}
+@media (min-width: 0px) and (max-width: 576px) {
+  .container-grid {
+    grid-template-rows: auto;
+    row-gap: 0.1rem;
+  }
+}
+@media (min-width: 576px) and (max-width: 992px) {
+  .container-grid {
+    grid-template-columns: auto auto;
+    column-gap: 0.75;
+    /** Support Browsers */
+    -webkit-column-gap: 0.75;
+    -moz-column-gap: 0.75;
+  }
+}
+@media (min-width: 992px) {
+  .container-grid {
+    grid-template-columns: auto auto;
+    column-gap: 1.5rem;
+    /** Support Browsers */
+    -webkit-column-gap: 1.5rem;
+    -moz-column-gap: 1.5rem;
+  }
+}
+
 /** __Header */
+.header {
+  background-image: url(../images/desarrolloweb2021t.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 15rem;
+  /** Breakpoints */
+}
+@media (min-width: 0px) and (max-width: 576px) {
+  .header {
+    height: 5rem;
+  }
+}
+@media (min-width: 576px) and (max-width: 992px) {
+  .header {
+    height: 10rem;
+  }
+}
+
 /** __Footer */
 /** __Sidebar */
 /** __Forms */
