--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -1,1 +1,44 @@
 /** __Grid */
+.container-grid {
+    display: grid;
+
+    &__section {
+        @include breakpoint("Celular") {
+            border: 1px solid $black;
+            margin: 0.2rem 1rem;
+            padding: 2rem;
+        }
+        @include breakpoint("Tablet") {
+            border: 1px solid $black;
+            margin: 1rem;
+            padding: 2rem;
+        }
+        @include breakpoint("Desktop") {
+            border: 1px solid $black;
+            margin: 1rem;
+            padding: 2rem;
+        }
+    }
+
+    /** Breakpoints */
+    @include breakpoint("Celular") {
+        grid-template-rows: auto;
+        row-gap: 0.1rem;
+    }
+    @include breakpoint("Tablet") {
+        grid-template-columns: auto auto;
+        column-gap: 0.75;
+
+        /** Support Browsers */
+        -webkit-column-gap: 0.75;
+        -moz-column-gap: 0.75;
+    }
+    @include breakpoint("Desktop") {
+        grid-template-columns: auto auto;
+        column-gap: 1.5rem;
+
+        /** Support Browsers */
+        -webkit-column-gap: 1.5rem;
+        -moz-column-gap: 1.5rem;
+    }
+}
