--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,1 +1,62 @@
 /** __Footer */
+.footer {
+    background-color: $black;
+    color: $white;
+    display: flex;
+    font-family: $poppins;
+    font-size: $medium;
+    justify-content: space-between;
+    height: 5rem;
+    margin: 0.2rem 0rem;
+    width: auto;
+    &__derechos {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        width: 40%;
+        p {
+            margin: 2rem;
+
+            @include breakpoint("Celular") {
+                margin: 1rem;
+            }
+        }
+
+        @include breakpoint("Celular") {
+            width: 100%;
+        }
+    }
+    &__contacto {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        width: 40%;
+        ul {
+            margin: 0.2rem;
+            padding: 0.2rem 0rem;
+            list-style: none;
+            li {
+                display: inline-block;
+                margin: 0.2rem;
+                input:focus {
+                    background-color: $tangerine;
+                }
+
+                @include breakpoint("Celular") {
+                    display: block;
+                }
+            }
+        }
+
+        @include breakpoint("Celular") {
+            width: 100%;
+        }
+    }
+
+    @include breakpoint("Celular") {
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+        text-align: center;
+    }
+}
