--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -3,6 +3,7 @@
     background-color: $black;
     color: $white;
     display: flex;
+    font-family: $poppins;
     font-weight: $bold;
     justify-content: center;
     padding: 0rem;
@@ -16,8 +17,6 @@
     align-items: center;
     -webkit-box-sizing: inherit;
     box-sizing: inherit;
-    display: -webkit-box;
-    display: -ms-flexbox;
 
     &__container {
         align-items: center;
@@ -30,8 +29,6 @@
         width: 100%;
 
         /** Support Browsers */
-        display: -webkit-box;
-        display: -ms-flexbox;
         -ms-flex-wrap: inherit;
         -webkit-box-align: center;
         -ms-flex-align: center;
@@ -85,6 +82,9 @@
 
             /** Breakpoints */
             @include breakpoint("Celular") {
+                &:hover {
+                    color: $tangerine;
+                }
                 display: block;
                 margin: 0rem 1rem 0rem 0rem;
             }
@@ -105,8 +105,6 @@
             width: 100%;
 
             /** Support Browsers */
-            display: -webkit-box;
-            display: -ms-flexbox;
             -ms-flex-preferred-size: auto;
             -webkit-box-align: center;
             -ms-flex-align: center;
@@ -130,8 +128,6 @@
                 width: 100%;
 
                 /** Support Browsers */
-                display: -webkit-box;
-                display: -ms-flexbox;
                 -webkit-box-orient: horizontal;
                 -webkit-box-direction: normal;
                 -ms-flex-direction: row;
